# RaspberryPiProjects

./: README.md  keydrive.rb  lchika.py  lchika.rb  moter_driver.rb  moterdriver_test.rb  serial_test.py
7291p/: 7291test.py  7291test.rb
IsThereNagashima/: app_server.rb  app_server_no_camera.rb  import.sql  is_there.db  sense_camera.py
IsThereNagashima/FaceDetection/: CMakeCache.txt  CMakeLists.txt  FaceDetection  Makefile  cmake_install.cmake  main.cpp
IsThereNagashima/views/: index.erb
Spi/: lm35dz_thermister.py
WithArduino/: contact.py  serial.c
camera/: test_camera.py
lib/: gpio.rb  moter_driver.rb
